// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__total"
    >
      共 100 项数据
    </div>
    <div
      class="t-pagination__select"
    >
      <div
        class="t-select-wrap"
      >
        <div
          class="t-popup-reference t-select-popup-reference"
        >
          <div
            class="t-select"
            style="user-select: none;"
          >
            <span
              class="t-select-left-icon"
            />
            <span
              class="t-select-selectedSingle"
            >
              5 条/页
            </span>
            <svg
              class="t-fake-arrow t-select-right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <svg
        class="t-icon t-icon-chevron-left"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <svg
          class="t-icon t-icon-ellipsis"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </li>
      <li
        class="t-pagination__number"
      >
        20
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`jump.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__total"
    >
      共 645 项数据
    </div>
    <div
      class="t-pagination__select"
    >
      <div
        class="t-select-wrap"
      >
        <div
          class="t-popup-reference t-select-popup-reference"
        >
          <div
            class="t-select"
            style="user-select: none;"
          >
            <span
              class="t-select-left-icon"
            />
            <span
              class="t-select-selectedSingle"
            >
              20 条/页
            </span>
            <svg
              class="t-fake-arrow t-select-right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <svg
        class="t-icon t-icon-chevron-left"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <svg
          class="t-icon t-icon-ellipsis"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </li>
      <li
        class="t-pagination__number"
      >
        33
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-pagination__jump"
    >
      跳至
      <div
        class="t-input"
      >
        <input
          class="t-input__inner"
        />
      </div>
      页
    </div>
  </div>
</DocumentFragment>
`;

exports[`mini.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination t-size-s"
  >
    <div
      class="t-pagination__total"
    >
      共 100 项数据
    </div>
    <div
      class="t-pagination__select"
    >
      <div
        class="t-select-wrap"
      >
        <div
          class="t-popup-reference t-select-popup-reference"
        >
          <div
            class="t-select t-size-s"
            style="user-select: none;"
          >
            <span
              class="t-select-left-icon"
            />
            <span
              class="t-select-selectedSingle"
            >
              5 条/页
            </span>
            <svg
              class="t-fake-arrow t-select-right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <svg
        class="t-icon t-icon-chevron-left"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <svg
          class="t-icon t-icon-ellipsis"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </li>
      <li
        class="t-pagination__number"
      >
        20
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`more.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__total"
    >
      共 100 项数据
    </div>
    <div
      class="t-pagination__select"
    >
      <div
        class="t-select-wrap"
      >
        <div
          class="t-popup-reference t-select-popup-reference"
        >
          <div
            class="t-select"
            style="user-select: none;"
          >
            <span
              class="t-select-left-icon"
            />
            <span
              class="t-select-selectedSingle"
            >
              5 条/页
            </span>
            <svg
              class="t-fake-arrow t-select-right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <svg
        class="t-icon t-icon-chevron-left"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <svg
          class="t-icon t-icon-ellipsis"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </li>
      <li
        class="t-pagination__number"
      >
        20
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`page-num.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__total"
    >
      共 645 项数据
    </div>
    <div
      class="t-pagination__select"
    >
      <div
        class="t-select-wrap"
      >
        <div
          class="t-popup-reference t-select-popup-reference"
        >
          <div
            class="t-select"
            style="user-select: none;"
          >
            <span
              class="t-select-left-icon"
            />
            <span
              class="t-select-selectedSingle"
            >
              20 条/页
            </span>
            <svg
              class="t-fake-arrow t-select-right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <svg
        class="t-icon t-icon-chevron-left"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <svg
          class="t-icon t-icon-ellipsis"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </li>
      <li
        class="t-pagination__number"
      >
        33
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`simple.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__total"
    >
      共 100 项数据
    </div>
    <div
      class="t-pagination__select"
    >
      <div
        class="t-select-wrap"
      >
        <div
          class="t-popup-reference t-select-popup-reference"
        >
          <div
            class="t-select"
            style="user-select: none;"
          >
            <span
              class="t-select-left-icon"
            />
            <span
              class="t-select-selectedSingle"
            >
              5 条/页
            </span>
            <svg
              class="t-fake-arrow t-select-right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <svg
        class="t-icon t-icon-chevron-left"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-pagination__select"
    >
      <div
        class="t-select-wrap"
      >
        <div
          class="t-popup-reference t-select-popup-reference"
        >
          <div
            class="t-select"
            style="user-select: none;"
          >
            <span
              class="t-select-left-icon"
            />
            <span
              class="t-select-selectedSingle"
            >
              1/20
            </span>
            <svg
              class="t-fake-arrow t-select-right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`simple-mini.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination t-size-s"
  >
    <div
      class="t-pagination__total"
    >
      共 100 项数据
    </div>
    <div
      class="t-pagination__select"
    >
      <div
        class="t-select-wrap"
      >
        <div
          class="t-popup-reference t-select-popup-reference"
        >
          <div
            class="t-select t-size-s"
            style="user-select: none;"
          >
            <span
              class="t-select-left-icon"
            />
            <span
              class="t-select-selectedSingle"
            >
              5 条/页
            </span>
            <svg
              class="t-fake-arrow t-select-right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <svg
        class="t-icon t-icon-chevron-left"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-pagination__select"
    >
      <div
        class="t-select-wrap"
      >
        <div
          class="t-popup-reference t-select-popup-reference"
        >
          <div
            class="t-select t-size-s"
            style="user-select: none;"
          >
            <span
              class="t-select-left-icon"
            />
            <span
              class="t-select-selectedSingle"
            >
              1/20
            </span>
            <svg
              class="t-fake-arrow t-select-right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`total.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__total"
    >
      共 685 项数据
    </div>
    <div
      class="t-pagination__select"
    >
      <div
        class="t-select-wrap"
      >
        <div
          class="t-popup-reference t-select-popup-reference"
        >
          <div
            class="t-select"
            style="user-select: none;"
          >
            <span
              class="t-select-left-icon"
            />
            <span
              class="t-select-selectedSingle"
            >
              10 条/页
            </span>
            <svg
              class="t-fake-arrow t-select-right-icon"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                stroke="black"
                stroke-opacity="0.9"
                stroke-width="1.3"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <svg
        class="t-icon t-icon-chevron-left"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <svg
          class="t-icon t-icon-ellipsis"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </li>
      <li
        class="t-pagination__number"
      >
        69
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
